--- a/Algorithm.ipynb
+++ b/Algorithm.ipynb
@@ -2,59 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "18549af1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from typing import *\n",
-    "\n",
-    "\n",
-    "\n",
-    "test=Solution()\n",
-    "nums = [6, 2, 3, 5, 1, 4]\n",
-    "test.sortArray(nums)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "ddd728c4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ac1fa62",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4877d7f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4a3ba74",
+   "id": "b0c744b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -629,18 +578,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af5e0fb4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "bce54527",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 数组滑动窗口"
+   ]
   },
   {
    "cell_type": "code",
@@ -648,7 +591,24 @@
    "id": "0890a111",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 固定长度窗口模板\n",
+    "\n",
+    "left = 0\n",
+    "right = 0\n",
+    "\n",
+    "while right < len(nums):\n",
+    "    window.append(nums[right])\n",
+    "    \n",
+    "    # 超过窗口大小时，缩小窗口，维护窗口中始终为 window_size 的长度\n",
+    "    if right - left + 1 >= window_size:\n",
+    "        # ... 维护答案\n",
+    "        window.popleft()\n",
+    "        left += 1\n",
+    "    \n",
+    "    # 向右侧增大窗口\n",
+    "    right += 1"
+   ]
   },
   {
    "cell_type": "code",
@@ -656,12 +616,146 @@
    "id": "cd515ed2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 不定长度窗口\n",
+    "\n",
+    "left = 0\n",
+    "right = 0\n",
+    "\n",
+    "while right < len(nums):\n",
+    "    window.append(nums[right])\n",
+    "    \n",
+    "    while 窗口需要缩小:\n",
+    "        # ... 可维护答案\n",
+    "        window.popleft()\n",
+    "        left += 1\n",
+    "    \n",
+    "    # 向右侧增大窗口\n",
+    "    right += 1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cbe54b82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0f546e7",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cf625e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "436426c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2afd919",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c19f5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "458233d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "085a5814",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "270d67a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb2c2a79",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62da189e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "621534e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d6c87f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "148fab96",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cb93ede",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56219223",
    "metadata": {},
    "outputs": [],
    "source": []
