--- a/Algorithm.ipynb
+++ b/Algorithm.ipynb
@@ -1,12 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "b0c744b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "按照研究院的正向开发流程，数据分析有助于明确客户群，进而确定开发目标，可以结合客户群的使用工况提供分级的依据。\n",
+    "\n",
+    "比如案例中的加速度分析等，可以通过与路谱进行比对，同时根据车型，确定异响、操作力分级。（常规项目的路谱的采集工作都是在试验场里完成的）\n",
+    "\n",
+    "舒适度，电动出风口的智能化，另外作为装饰条或氛围灯颜色变化的输入。\n",
+    "\n",
+    "一般而言，气温、气压、相对湿度、风速四个气象要素对人体感觉影响最大。\n",
+    "\n",
+    "根据温度和湿度之间的关系，人体舒适度计算公式为：ssd=(1.818t+ 18.18)(0.88 + 0.002f)+(t- 32) / (45 -t)- 3.2v+ 18.2。其中ssd为人体舒适度指数,t为平均气温,f为相对湿度,v为风速。\n",
+    "\n",
+    "人体舒适度指数是指根据当日最高气温和 14时相对湿度的预报值计算指数值，再利用指数的大小划分等级并确定舒适程度。\n",
+    "舒适度指数是描述气温和湿度对人体的综合影响指标之一，它表征人体在某种温、湿度条件下对该空气环境感觉舒适的程度，用气温和相对湿度的不同组合来表示。\n",
+    "DI = T - ( 0.55 - 0.55f ) ( T - 58 )\n",
+    "T为华氏度。T=1.8*t+32 t为摄氏度。"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -21,7 +34,15 @@
    "id": "4eb0a841",
    "metadata": {},
    "source": [
-    "## Array_Sort"
+    "## 数组排序 Array_Sort "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "838cecd3",
+   "metadata": {},
+   "source": [
+    "### 冒泡排序 Bubble Sort 稳定"
    ]
   },
   {
@@ -31,8 +52,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#1 Bubble Sort 冒泡排序  稳定\n",
-    "\n",
     "from typing import *\n",
     "\n",
     "class Solution:\n",
@@ -56,14 +75,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fbfad251",
+   "metadata": {},
+   "source": [
+    "### 选择排序 Selection Sort 不稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "68d9a047",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2 Selection Sort 选择排序 不稳定\n",
-    "\n",
     "class Solution:\n",
     "    def selectionSort(self, arr):\n",
     "        for i in range(len(arr) - 1):\n",
@@ -82,14 +107,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31f1edc1",
+   "metadata": {},
+   "source": [
+    "### 插入排序 Insertion Sort 稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4b7a127d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#3 Insertion Sort 插入排序 稳定\n",
-    "\n",
     "class Solution:\n",
     "    def insertionSort(self, arr):\n",
     "        # 遍历无序序列\n",
@@ -111,14 +142,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61a2dcfa",
+   "metadata": {},
+   "source": [
+    "### 希尔排序 Shell Sort  不稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9258f1ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#4 Shell Sort 希尔排序  不稳定\n",
-    "\n",
     "class Solution:\n",
     "    def shellSort(self, arr):\n",
     "        size = len(arr)\n",
@@ -146,14 +183,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80b71cf1",
+   "metadata": {},
+   "source": [
+    "### 归并排序 Merge Sort 稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "198d199f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#5 Merge Sort 归并排序 稳定\n",
-    "\n",
     "class Solution:\n",
     "    def merge(self, left_arr, right_arr):           # 归并过程\n",
     "        arr = []\n",
@@ -193,14 +236,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a67caccd",
+   "metadata": {},
+   "source": [
+    "### 快速排序 Quick Sort 不稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "845cbcfc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#6 Quick Sort 快速排序 不稳定\n",
-    "\n",
     "import random\n",
     "\n",
     "class Solution:\n",
@@ -245,14 +294,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84128ab5",
+   "metadata": {},
+   "source": [
+    "### 堆排序 Heap sort 不稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fb0fdddb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#7 Heap sort 堆排序 不稳定\n",
-    "\n",
     "class Solution:\n",
     "    # 调整为大顶堆\n",
     "    def heapify(self, arr: [int], index: int, end: int):\n",
@@ -301,14 +356,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f3d2daf7",
+   "metadata": {},
+   "source": [
+    "### 计数排序 Counting Sort 稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1f06ba9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#8 Counting Sort 计数排序 稳定\n",
-    "\n",
     "class Solution:\n",
     "    def countingSort(self, arr):\n",
     "        # 计算待排序序列中最大值元素 arr_max 和最小值元素 arr_min\n",
@@ -340,14 +401,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f06a34d0",
+   "metadata": {},
+   "source": [
+    "### 桶排序 Bucket Sort 稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1eda9fa1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#9 Bucket Sort 桶排序 稳定\n",
-    "\n",
     "class Solution:\n",
     "    def insertionSort(self, arr):\n",
     "        # 遍历无序序列\n",
@@ -389,15 +456,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "054367d7",
+   "metadata": {},
+   "source": [
+    "### 基数排序 Radix Sort 稳定"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4999b13e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#10 Radix Sort 基数排序  稳定\n",
-    "\n",
-    "\n",
     "class Solution:\n",
     "    def radixSort(self, arr):\n",
     "        # 桶的大小为所有元素的最大位数\n",
@@ -425,11 +497,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa854416",
+   "metadata": {},
+   "source": [
+    "## 二分查找算法（Binary Search Algorithm）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "22ab9389",
    "metadata": {},
    "source": [
-    "## 二分查找算法（Binary Search Algorithm）\n",
-    "\n",
+    "要点：\n",
     "* 左闭右闭：初始化赋值时，left = 0，right = len(nums) - 1，left 为数组第一个元素位置，right 为数组最后一个元素位置，从而区间 [left, right] 左右边界上的点都能取到。\n",
     "\n",
     "* 如果判断语句为 left <= right，且查找的元素不存在，则 while 判断语句出界条件是 left == right + 1，写成区间形式就是 [right + 1, right]，此时待查找区间为空，待查找区间中没有元素存在，所以此时终止循环可以直接返回 -1 是正确的。\n",
@@ -442,7 +521,7 @@
     "    return left if nums[left] == target else -1\n",
     "    \n",
     "* 思路 1：「直接找」—— 在循环体中找到元素后直接返回结果。\n",
-    "<br>思路 2：「排除法」—— 在循环体中排除目标元素一定不存在区间。"
+    "  思路 2：「排除法」—— 在循环体中排除目标元素一定不存在区间。"
    ]
   },
   {
@@ -635,18 +714,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbe54b82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "a0f546e7",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 动态规划（Dynamic Programming）\n",
+    "\n",
+    "能够使用动态规划方法解决的问题必须满足下面三个特征：「最优子结构性质」、「重叠子问题性质」和「无后效性」"
+   ]
   },
   {
    "cell_type": "code",
@@ -654,7 +729,22 @@
    "id": "7cf625e9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def uniquePaths(self, m: int, n: int) -> int:\n",
+    "        dp = [[0 for _ in range(n)] for _ in range(m)]\n",
+    "        \n",
+    "        for j in range(n):\n",
+    "            dp[0][j] = 1\n",
+    "        for i in range(m):\n",
+    "            dp[i][0] = 1\n",
+    "\n",
+    "        for i in range(1, m):\n",
+    "            for j in range(1, n):\n",
+    "                dp[i][j] = dp[i - 1][j] + dp[i][j - 1]\n",
+    "        \n",
+    "        return dp[m - 1][n - 1]"
+   ]
   },
   {
    "cell_type": "code",
@@ -673,60 +763,121 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "03c19f5a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 基础算法"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "458233d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 枚举算法 （Enumeration）"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "085a5814",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 递归算法 （Recursion）"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ec2a32d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 斐波那契数列\n",
+    "\n",
+    "class Solution:\n",
+    "    def fib(self, n: int) -> int:\n",
+    "        if n == 0:\n",
+    "            return 0\n",
+    "        if n == 1:\n",
+    "            return 1\n",
+    "        return self.fib(n - 1) + self.fib(n - 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "270d67a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 分治算法 （Divide and Conquer）"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c33106cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divide_and_conquer(problem):                # problem 为问题规模\n",
+    "    if problem < d:                             # 当问题规模足够小时，直接解决该问题\n",
+    "        return solove();                        # 直接求解\n",
+    "    \n",
+    "    k_problems = divide(problem)                # 将问题分解为 k 个相同形式的子问题\n",
+    "    \n",
+    "    res = [0 for _ in range(k)]                 # res 用来保存 k 个子问题的解\n",
+    "    for k_problem in k_problems:\n",
+    "        res[i] = divide_and_conquer(k_problem)  # 递归的求解 k 个子问题\n",
+    "    \n",
+    "    ans = merge(res)                            # 合并 k 个子问题的解\n",
+    "    return ans                                  # 返回原问题的解"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bb2c2a79",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 回溯算法 （Backtracking）"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f036cfbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = []    # 存放所欲符合条件结果的集合\n",
+    "path = []   # 存放当前符合条件的结果\n",
+    "def backtracking(nums):             # nums 为选择元素列表\n",
+    "    if 遇到边界条件:                  # 说明找到了一组符合条件的结果\n",
+    "        res.append(path[:])         # 将当前符合条件的结果放入集合中\n",
+    "        return\n",
+    "\n",
+    "    for i in range(len(nums)):      # 枚举可选元素列表\n",
+    "        path.append(nums[i])        # 选择元素\n",
+    "        backtracking(nums)          # 递归搜索\n",
+    "        path.pop()                  # 撤销选择\n",
+    "\n",
+    "backtracking(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "62da189e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 贪心算法 （Greedy）"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "621534e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 位运算 （Bit Operation）"
+   ]
   },
   {
    "cell_type": "code",
