--- a/Leetcode.ipynb
+++ b/Leetcode.ipynb
@@ -10,7 +10,18 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。\n",
     "\n",
@@ -45,7 +56,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 128 给定一个未排序的整数数组 nums ，找出数字连续的最长序列（不要求序列元素在原数组中连续）的长度。\n",
     "\n",
@@ -82,7 +104,26 @@
    "execution_count": null,
    "id": "1c6386be-ab55-478a-b3eb-1600fd9d7098",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i= 0\n",
+      "[1, 2, 3, 0, 4, 5]\n",
+      "i= 1\n",
+      "[1, 2, 3, 0, 4, 5]\n",
+      "i= 2\n",
+      "[1, 2, 3, 0, 4, 5]\n",
+      "i= 4\n",
+      "j= 3\n",
+      "[1, 2, 3, 4, 0, 5]\n",
+      "i= 5\n",
+      "j= 4\n",
+      "[1, 2, 3, 4, 5, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# 238 给定一个数组 nums，编写一个函数将所有 0 移动到数组的末尾，同时保持非零元素的相对顺序。\n",
     "# 请注意 ，必须在不复制数组的情况下原地对数组进行操作。\n",
@@ -115,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bfbdc4a4-8fe9-40fd-bf3b-4a287c72081b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "88137614",
    "metadata": {},
    "outputs": [
@@ -167,18 +208,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 0, 'b': 1, 'c': 0}\n"
+      "window 1 = {'a': 1}\n",
+      "window 1 = {'a': 1, 'b': 1}\n",
+      "window 1 = {'a': 1, 'b': 1, 'c': 1}\n",
+      "window 2 = {'a': 2, 'b': 1, 'c': 1}\n",
+      "window = 3 {'a': 1, 'b': 1, 'c': 1}\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -200,9 +235,10 @@
     "            while window[s[right]] > 1:\n",
     "                window[s[left]] -= 1\n",
     "                left += 1\n",
-    "                print(\"window = 3\",window)\n",
+    "                print(\"window 3 = \",window)\n",
     "\n",
     "            ans = max(ans, right - left + 1)\n",
+    "            print(ans)\n",
     "            right += 1\n",
     "        print(\"window =\",window)\n",
     "        return ans\n",
