--- a/Leetcode.ipynb
+++ b/Leetcode.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "88137614",
    "metadata": {},
    "outputs": [
@@ -209,14 +209,60 @@
      "output_type": "stream",
      "text": [
       "window 1 = {'a': 1}\n",
+      "right= 0\n",
+      "1\n",
       "window 1 = {'a': 1, 'b': 1}\n",
+      "right= 1\n",
+      "2\n",
       "window 1 = {'a': 1, 'b': 1, 'c': 1}\n",
+      "right= 2\n",
+      "3\n",
       "window 2 = {'a': 2, 'b': 1, 'c': 1}\n",
-      "window = 3 {'a': 1, 'b': 1, 'c': 1}\n"
+      "right= 3\n",
+      "left= 0\n",
+      "window 3 =  {'a': 1, 'b': 1, 'c': 1}\n",
+      "3\n",
+      "window 2 = {'a': 1, 'b': 2, 'c': 1}\n",
+      "right= 4\n",
+      "left= 1\n",
+      "window 3 =  {'a': 1, 'b': 1, 'c': 1}\n",
+      "3\n",
+      "window 2 = {'a': 1, 'b': 1, 'c': 2}\n",
+      "right= 5\n",
+      "left= 2\n",
+      "window 3 =  {'a': 1, 'b': 1, 'c': 1}\n",
+      "3\n",
+      "window 2 = {'a': 1, 'b': 2, 'c': 1}\n",
+      "right= 6\n",
+      "left= 3\n",
+      "window 3 =  {'a': 0, 'b': 2, 'c': 1}\n",
+      "left= 4\n",
+      "window 3 =  {'a': 0, 'b': 1, 'c': 1}\n",
+      "3\n",
+      "window 2 = {'a': 0, 'b': 2, 'c': 1}\n",
+      "right= 7\n",
+      "left= 5\n",
+      "window 3 =  {'a': 0, 'b': 2, 'c': 0}\n",
+      "left= 6\n",
+      "window 3 =  {'a': 0, 'b': 1, 'c': 0}\n",
+      "3\n",
+      "window = {'a': 0, 'b': 1, 'c': 0}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#3. 无重复字符的最长子串\n",
+    "\n",
     "class Solution:\n",
     "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
     "        left = 0\n",
@@ -231,10 +277,12 @@
     "            else:\n",
     "                window[s[right]] += 1\n",
     "                print(\"window 2 =\",window)\n",
-    "\n",
+    "            print(\"right=\",right)\n",
     "            while window[s[right]] > 1:\n",
+    "                print(\"left 1=\",left)\n",
     "                window[s[left]] -= 1\n",
     "                left += 1\n",
+    "                print(\"left 2=\",left)\n",
     "                print(\"window 3 = \",window)\n",
     "\n",
     "            ans = max(ans, right - left + 1)\n",
@@ -249,6 +297,14 @@
     "\n",
     "o.lengthOfLongestSubstring(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "786f1f17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
