--- a/Leetcode.ipynb
+++ b/Leetcode.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1c6386be-ab55-478a-b3eb-1600fd9d7098",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "88137614",
    "metadata": {},
    "outputs": [
@@ -219,45 +219,60 @@
       "3\n",
       "window 2 = {'a': 2, 'b': 1, 'c': 1}\n",
       "right= 3\n",
-      "left= 0\n",
+      "left 1= 0\n",
+      "left 2= 1\n",
       "window 3 =  {'a': 1, 'b': 1, 'c': 1}\n",
       "3\n",
       "window 2 = {'a': 1, 'b': 2, 'c': 1}\n",
       "right= 4\n",
-      "left= 1\n",
+      "left 1= 1\n",
+      "left 2= 2\n",
       "window 3 =  {'a': 1, 'b': 1, 'c': 1}\n",
       "3\n",
       "window 2 = {'a': 1, 'b': 1, 'c': 2}\n",
       "right= 5\n",
-      "left= 2\n",
+      "left 1= 2\n",
+      "left 2= 3\n",
       "window 3 =  {'a': 1, 'b': 1, 'c': 1}\n",
       "3\n",
       "window 2 = {'a': 1, 'b': 2, 'c': 1}\n",
       "right= 6\n",
-      "left= 3\n",
+      "left 1= 3\n",
+      "left 2= 4\n",
       "window 3 =  {'a': 0, 'b': 2, 'c': 1}\n",
-      "left= 4\n",
+      "left 1= 4\n",
+      "left 2= 5\n",
       "window 3 =  {'a': 0, 'b': 1, 'c': 1}\n",
       "3\n",
       "window 2 = {'a': 0, 'b': 2, 'c': 1}\n",
       "right= 7\n",
-      "left= 5\n",
+      "left 1= 5\n",
+      "left 2= 6\n",
       "window 3 =  {'a': 0, 'b': 2, 'c': 0}\n",
-      "left= 6\n",
+      "left 1= 6\n",
+      "left 2= 7\n",
       "window 3 =  {'a': 0, 'b': 1, 'c': 0}\n",
       "3\n",
       "window = {'a': 0, 'b': 1, 'c': 0}\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/frei/venv/Python_Algorithm/Leetcode.ipynb Cell 5\u001b[0m line \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/frei/venv/Python_Algorithm/Leetcode.ipynb#W4sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m s \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mabcabcbb\u001b[39m\u001b[39m\"\u001b[39m    \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/frei/venv/Python_Algorithm/Leetcode.ipynb#W4sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m o\u001b[39m=\u001b[39mSolution()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/frei/venv/Python_Algorithm/Leetcode.ipynb#W4sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m o\u001b[39m.\u001b[39;49mlengthOfLongestSubstring(s)\n",
+      "File \u001b[0;32m_pydevd_bundle/pydevd_cython.pyx:1457\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.SafeCallWrapper.__call__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m_pydevd_bundle/pydevd_cython.pyx:701\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m_pydevd_bundle/pydevd_cython.pyx:1395\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m_pydevd_bundle/pydevd_cython.pyx:1373\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.trace_dispatch\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m_pydevd_bundle/pydevd_cython.pyx:312\u001b[0m, in \u001b[0;36m_pydevd_bundle.pydevd_cython.PyDBFrame.do_wait_suspend\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/debugpy/_vendored/pydevd/pydevd.py:2070\u001b[0m, in \u001b[0;36mPyDB.do_wait_suspend\u001b[0;34m(self, thread, frame, event, arg, exception_type)\u001b[0m\n\u001b[1;32m   2067\u001b[0m             from_this_thread\u001b[39m.\u001b[39mappend(frame_custom_thread_id)\n\u001b[1;32m   2069\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_threads_suspended_single_notification\u001b[39m.\u001b[39mnotify_thread_suspended(thread_id, thread, stop_reason):\n\u001b[0;32m-> 2070\u001b[0m         keep_suspended \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_do_wait_suspend(thread, frame, event, arg, suspend_type, from_this_thread, frames_tracker)\n\u001b[1;32m   2072\u001b[0m frames_list \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   2074\u001b[0m \u001b[39mif\u001b[39;00m keep_suspended:\n\u001b[1;32m   2075\u001b[0m     \u001b[39m# This means that we should pause again after a set next statement.\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/debugpy/_vendored/pydevd/pydevd.py:2106\u001b[0m, in \u001b[0;36mPyDB._do_wait_suspend\u001b[0;34m(self, thread, frame, event, arg, suspend_type, from_this_thread, frames_tracker)\u001b[0m\n\u001b[1;32m   2103\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_call_input_hook()\n\u001b[1;32m   2105\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess_internal_commands()\n\u001b[0;32m-> 2106\u001b[0m     time\u001b[39m.\u001b[39msleep(\u001b[39m0.01\u001b[39m)\n\u001b[1;32m   2108\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcancel_async_evaluation(get_current_thread_id(thread), \u001b[39mstr\u001b[39m(\u001b[39mid\u001b[39m(frame)))\n\u001b[1;32m   2110\u001b[0m \u001b[39m# process any stepping instructions\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -304,7 +319,79 @@
    "id": "786f1f17",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 209. 长度最小的子数组\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d3d857d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 713. 乘积小于K的子数组\n",
+    "\n",
+    "class Solution:\n",
+    "    def numSubarrayProductLessThanK(self, nums: list[int], k: int) -> int:\n",
+    "        if k <= 1:\n",
+    "            return 0\n",
+    "\n",
+    "        size = len(nums)\n",
+    "        left = 0\n",
+    "        right = 0\n",
+    "        window_product = 1\n",
+    "        \n",
+    "        count = 0\n",
+    "        \n",
+    "        while right < size:\n",
+    "            window_product *= nums[right]\n",
+    "\n",
+    "            while window_product >= k:\n",
+    "                window_product /= nums[left]\n",
+    "                left += 1\n",
+    "\n",
+    "            \"\"\"\n",
+    "            ①right必须在子数组中存在，\n",
+    "            ②并且子数组是连续的，\n",
+    "            ③[left,right]的长度是right-left+1，记为n。\n",
+    "            \n",
+    "            枚举如下，共有 right - left + 1 种：\n",
+    "\n",
+    "            长度为1的nums[right]\n",
+    "            长度为2的nums[right-1], nums[right]\n",
+    "            长度为3的nums[right-2], nums[right-1], nums[right]\n",
+    "            ...\n",
+    "            长度为right - left + 1的nums[left], ......, nums[right-2], nums[right-1], nums[right]\n",
+    "\n",
+    "            \"\"\"\n",
+    "\n",
+    "\n",
+    "            count += (right - left + 1)\n",
+    "            right += 1\n",
+    "            \n",
+    "        return count\n",
+    "\n",
+    "nums = [10,5,2,6]\n",
+    "\n",
+    "k = 100\n",
+    "\n",
+    "o=Solution()\n",
+    "\n",
+    "o.numSubarrayProductLessThanK(nums,k)"
+   ]
   }
  ],
  "metadata": {
