--- a/Algorithm.ipynb
+++ b/Algorithm.ipynb
@@ -715,6 +715,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "261ffe59",
+   "metadata": {},
+   "source": [
+    "# 图\n",
+    "\n",
+    "BFS 广度优先搜索"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f70171a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 利用 队列 实现 广度优先搜索 https://leetcode.cn/problems/keys-and-rooms/\n",
+    "\n",
+    "class Solution:\n",
+    "    def canVisitAllRooms(self, rooms: List[List[int]]) -> bool:\n",
+    "        visited, queue = {0}, [0]\n",
+    "        while queue:\n",
+    "            room_index = queue.pop()\n",
+    "            for key in rooms[room_index]:\n",
+    "                if key not in visited:\n",
+    "                    visited.add(key)\n",
+    "                    queue.insert(0,key)\n",
+    "        return len(visited) == len(rooms)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a0f546e7",
    "metadata": {},
    "source": [
