--- a/Algorithm.ipynb
+++ b/Algorithm.ipynb
@@ -720,7 +720,7 @@
    "source": [
     "# 图\n",
     "\n",
-    "BFS 广度优先搜索"
+    "### BFS 广度优先搜索"
    ]
   },
   {
@@ -741,10 +741,76 @@
     "                if key not in visited:\n",
     "                    visited.add(key)\n",
     "                    queue.insert(0,key)\n",
+    "        return len(visited) == len(rooms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "237c0c04",
+   "metadata": {},
+   "source": [
+    "### DFS 深度优先搜索\n",
+    "\n",
+    "#### 栈\n",
+    "补充——关于在Python中使用栈 直接使用list即可，只使用它的这两个方法\n",
+    "\n",
+    "pop()\n",
+    "append()\n",
+    "\n",
+    "#### 递归\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "955ac19f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DFS 栈\n",
+    "class Solution:\n",
+    "    def canVisitAllRooms(self, rooms: List[List[int]]) -> bool:\n",
+    "        visited, stack = {0}, [0]\n",
+    "        while stack:\n",
+    "            room_index = stack.pop()\n",
+    "            for key in rooms[room_index]:\n",
+    "                if key not in visited: \n",
+    "                    visited.add(key)\n",
+    "                    stack.append(key)\n",
+    "        return len(visited) == len(rooms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96452a01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DFS 递归\n",
+    "\n",
+    "class Solution:\n",
+    "    def canVisitAllRooms(self, rooms: List[List[int]]) -> bool:\n",
+    "        visited = {0}\n",
+    "        def dfs(room_index,visited):\n",
+    "            visited.add(room_index)\n",
+    "            for key in rooms[room_index]:\n",
+    "                if key not in visited: dfs(key,visited)\n",
+    "        dfs(0,visited)\n",
     "        return len(visited) == len(rooms)\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d46ca164",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
