--- a/Algorithm.ipynb
+++ b/Algorithm.ipynb
@@ -846,19 +846,99 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "436426c2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 区间动态规划\n",
+    "\n",
+    "根据小区间向大区间转移情况的不同，常见的区间 DP 问题可以分为两种：\n",
+    "\n",
+    "1. 单个区间从中间向两侧更大区间转移的区间 DP 问题。比如从区间 [i+1,j−1][i + 1, j - 1][i+1,j−1] 转移到更大区间 [i,j][i, j][i,j]。\n",
+    "\n",
+    "2. 多个（大于等于 2个）小区间转移到大区间的区间 DP 问题。比如从区间 [i,k][i, k][i,k] 和区间 [k,j][k, j][k,j] 转移到区间 [i,j][i, j][i,j]。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83d81aab",
+   "metadata": {},
+   "source": [
+    "### 区间 DP 问题的基本思路\n",
+    "#### 第 1 种区间 DP 问题基本思路\n",
+    "\n",
+    "从中间向两侧转移的区间 DP 问题的状态转移方程一般为：\n",
+    "\n",
+    "dp[i][j]=max{dp[i+1][j−1],dp[i+1][j],dp[i][j−1]}+cost[i][j],i≤j。\n",
+    "\n",
+    "1. 其中 dp[i][j]d表示为：区间 [i,j][i, j][i,j]（即下标位置 iii 到下标位置 jjj 上所有元素）上的最大价值。\n",
+    "\n",
+    "2. cost表示为：从小区间转移到区间 [i,j][i, j][i,j] 的代价。\n",
+    "\n",
+    "3. 这里的 max/minmax / minmax/min 取决于题目是求最大值还是求最小值。\n",
+    "\n",
+    "从中间向两侧转移的区间 DP 问题的基本解题思路如下：\n",
+    "\n",
+    "1. 枚举区间的起点；\n",
+    "2. 枚举区间的终点；\n",
+    "3. 根据状态转移方程计算从小区间转移到更大区间后的最优值。"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2afd919",
+   "id": "c63af314",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "for i in range(size - 1, -1, -1):       # 枚举区间起点\n",
+    "    for j in range(i + 1, size):        # 枚举区间终点\n",
+    "        # 状态转移方程，计算转移到更大区间后的最优值\n",
+    "        dp[i][j] = max(dp[i + 1][j - 1], dp[i + 1][j], dp[i][j - 1]) + cost[i][j]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccca52b5",
+   "metadata": {},
+   "source": [
+    "### 第 2 种区间 DP 问题基本思路\n",
+    "多个（大于等于 222 个）小区间转移到大区间的区间 DP 问题的状态转移方程一般为：\n",
+    "dp[i][j]=max/min{dp[i][k]+dp[k+1][j]+cost[i][j]},i<k≤j。\n",
+    "\n",
+    "1. 其中状态 dp[i][j]dp[i][j]dp[i][j] 表示为：区间 [i,j][i, j][i,j] （即下标位置 iii 到下标位置 jjj 上所有元素）上的最大价值。\n",
+    "2. cost[i][j]cost[i][j]cost[i][j] 表示为：将两个区间 [i,k][i, k][i,k] 与 [k+1,j][k + 1, j][k+1,j] 中的元素合并为区间 [i,j][i, j][i,j] 中的元素的代价。\n",
+    "3. 这里的 max/minmax / minmax/min 取决于题目是求最大值还是求最小值。\n",
+    "\n",
+    "多个小区间转移到大区间的区间 DP 问题的基本解题思路如下：\n",
+    "\n",
+    "1. 枚举区间长度；\n",
+    "2. 枚举区间的起点，根据区间起点和区间长度得出区间终点；\n",
+    "3. 枚举区间的分割点，根据状态转移方程计算合并区间后的最优值。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aab2868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for l in range(1, n):               # 枚举区间长度\n",
+    "    for i in range(n):              # 枚举区间起点\n",
+    "        j = i + l - 1               # 根据起点和长度得到终点\n",
+    "        if j >= n:\n",
+    "            break\n",
+    "        dp[i][j] = float('-inf')    # 初始化 dp[i][j]\n",
+    "        for k in range(i, j + 1):   # 枚举区间分割点\n",
+    "            # 状态转移方程，计算合并区间后的最优值\n",
+    "            dp[i][j] = max(dp[i][j], dp[i][k] + dp[k + 1][j] + cost[i][j])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83451f56",
+   "metadata": {},
    "source": []
   },
   {
