--- a/Algorithm.ipynb
+++ b/Algorithm.ipynb
@@ -797,11 +797,7 @@
     "            for key in rooms[room_index]:\n",
     "                if key not in visited: dfs(key,visited)\n",
     "        dfs(0,visited)\n",
-    "        return len(visited) == len(rooms)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "        return len(visited) == len(rooms)"
    ]
   },
   {
