--- a/Leetcode.ipynb
+++ b/Leetcode.ipynb
@@ -392,6 +392,34 @@
     "\n",
     "o.numSubarrayProductLessThanK(nums,k)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3cea4055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "\n",
+    "memo = [0 for _ in range(n + 1)]\n",
+    "\n",
+    "print(memo)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47a8ede1",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
